# ogre3d-empty-workspace

./: CMakeLists.txt  README.rst
src/: Application.cpp
